--- a/SakabaWeb/Web.config
+++ b/SakabaWeb/Web.config
@@ -4,6 +4,32 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <section type="System.Configuration.NameValueFileSectionHandler" name="httpAuthModule"/>
+  </configSections>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SakabaWeb.mdf;Initial Catalog=aspnet-SakabaWeb;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+
+  <log4net>
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="App_Data/log4net/logfile.log" />
+      <appendToFile value="true" />
+      <rollingStyle value="Date" />
+      <encoding value="utf-8" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date #%-3thread %-5level %message%newline" />
+      </layout>
+    </appender>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="LogFileAppender" />
+    </root>
+  </log4net>
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -45,11 +71,20 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <httpAuthModule>
+    <add key="AuthMode" value="Digest"/>
+    <add key="Realm" value="sakaba.space"/>
+    <add key="Credentials" value="sakaba:sakaba2017;"/>
+    <add key="DigestNonceValidDuration" value="120"/>
+    <add key="DigestNonceSalt" value="uht9987bbbSAX"/>
+    <add key="IgnorePathRegex" value="^/Content/|^/Scripts/"/>
+  </httpAuthModule>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
+      <add type="HttpAuthModule.HttpAuthModule" name="HttpAuthModule" />
     </modules>
   </system.webServer>
   <system.codedom>
@@ -58,4 +93,14 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
