--- a/SakabaWeb/packages.config
+++ b/SakabaWeb/packages.config
@@ -2,9 +2,11 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net46" />
   <package id="bootstrap" version="3.0.0" targetFramework="net46" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="ImageResizer" version="4.0.5" targetFramework="net46" />
   <package id="jQuery" version="1.10.2" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net46" />
+  <package id="log4net" version="2.0.8" targetFramework="net46" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net46" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net46" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net46" />
