--- a/SakabaWeb/SakabaWeb.csproj
+++ b/SakabaWeb/SakabaWeb.csproj
@@ -178,6 +178,7 @@
     </Content>
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\sakaba-boss - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\sakababoss - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
